@@ -4,6 +4,9 @@
 	Fix crash when the gl view was repainted while loading a new effect.
 	Improve 3d view manipulation.
 	Message panel improvements by Lars.
+	Improved parameter panel, dynamic updates, color preview and sliders by Lars.
+	Add recent files menu.
+
 
 0.1.1
 	Reorganize sources to create debian packages.
